# MineGuard

./: MineGuard.sln  README.md  TODO.md  mineguard-descriptions.md  mineguard-readme.md
backend/MineGuard.Api/: Program.cs
backend/MineGuard.Api/Controllers/: AlertsController.cs  StatusController.cs  VehiclesController.cs
backend/MineGuard.Api/Models/: BatchPacket.cs  CollisionAlert.cs  Position.cs  SystemStatus.cs  TelemetryPacket.cs  Vehicle.cs  VehicleTelemetry.cs
backend/MineGuard.Api/Services/: FleetStateService.cs  TcpListenerService.cs
backend/MineGuard.Api/wwwroot/: index.html
backend/MineGuard.Api/wwwroot/css/: style.css
backend/MineGuard.Api/wwwroot/js/: app.js
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: app.js
simulator/: CMakeLists.txt
simulator/include/: collision.hpp  fleet.hpp  json_serializer.hpp  tcp_client.hpp  telemetry.hpp  vehicle.hpp
simulator/src/: collision.cpp  fleet.cpp  main.cpp  tcp_client.cpp  vehicle.cpp
